--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="SpaceX Launches" />
-  <link rel="apple-touch-icon" href="./apple-touch-icon.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
+  <meta name="description" content="React App" />
+    <!-- manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    --> 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i|PT+Serif+Caption&display=swap" rel="stylesheet">
   <link
@@ -30,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>SpaceX Launches</title>
 </head>
 
 <body>
